--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <textarea name="" id="" cols="15" 
                 rows="12" placeholder="Your Message"></textarea>
 
-                <input type="sumit" value="Send message" class="btn">
+                <input type="submit" value="Send message" class="btn">
 
             </div>
         </form>
